# git-archaeologist

./: .gitignore  README.md  commit-archaeologist.html  pyproject.toml  requirements.txt
src/commit_archaeologist/: __init__.py  analyzer.py  cli.py  report.py
tests/: test_analyzer.py
