[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-archaeologist"
version = "0.1.0"
description = "Dig through a git repository's history and unearth its story."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "GitPython>=3.1",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
git-archaeologist = "commit_archaeologist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
